[package]
name = "rust-hackathon"
version = "0.1.0"
authors = ["Vitta <vitta@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.libzfs]
branch = "0712"
git = "https://github.com/gila/rust-libzfs"
